--- a/WeatherApp/src/style.css
+++ b/WeatherApp/src/style.css
@@ -71,15 +71,14 @@ main {
   color: #f65282;
 }
 
-.current-temperature-icon {
-  position: relative;
-  top: -8px;
-  font-size: 40px;
-  margin-right: 10px;
+#current-temperature-icon img {
+  /* margin-right: 5px; */
+  width: 80px;
+  height: 80px;
 }
 
 .current-temperature-value {
-  font-size: 80px;
+  font-size: 84px;
   font-weight: bold;
 }
 
